--- a/_data/fotos.yml
+++ b/_data/fotos.yml
@@ -1,4 +1,32 @@
-- title: "Nueva foto"
-  url: "/assets/images/galeria/mi-foto.png"
+# Fotos para la galería principal
+# Agrega tus fotos en assets/images/galeria/
+
+- title: "Estudiantes en clase de ciencias"
+  url: "/assets/images/galeria/ciencias.png"
+  category: "Académico"
+  date: 2025-09-15
+
+- title: "Equipo de fútbol institucional"
+  url: "/assets/images/galeria/futbol.jpg"
+  category: "Deportes"
+  date: 2025-09-10
+
+- title: "Laboratorio de informática"
+  url: "/assets/images/galeria/computador.avif"
+  category: "Tecnología"
+  date: 2025-08-20
+
+- title: "Biblioteca institucional"
+  url: "/assets/images/galeria/biblioteca.jpg"
+  category: "Instalaciones"
+  date: 2025-08-15
+
+- title: "Acto cívico"
+  url: "/assets/images/galeria/civico.jpg"
   category: "Eventos"
-  date: 2025-09-30
+  date: 2025-09-28
+
+- title: "Huerta escolar"
+  url: "/assets/images/galeria/huerta.jpg"
+  category: "Proyectos"
+  date: 2025-08-30
