--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ baseurl: "/notiatanasiano"
 institution:
   name: "Institución Educativa Atanasio Girardot"
   location: "Girardota, Antioquia"
-  logo: "/assets/images/logo.png"
-  flag: "/assets/images/bandera-girardota.png"  # ← AGREGADO
-  anthem: "/assets/audio/himno.mp3"
+  logo: "/notiatanasiano/assets/images/logo.png"
+  flag: "/notiatanasiano/assets/images/bandera-girardota.png"  # ← AGREGADO
+  anthem: "/notiatanasiano/assets/audio/himno.mp3"
 
 social:
   facebook: "https://facebook.com/profile.php?id=100008360917770"
