Primer commit - Periódico Digital

--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,7 @@ institution:
   name: "Institución Educativa Atanasio Girardot"
   location: "Girardota, Antioquia"
   logo: "/assets/images/logo.png"
-  logo: "/notiatanasiano/assets/images/logo.png"
-  anthem: "/notiatanasiano/assets/audio/himno.mp3"
+  anthem: "/assets/audio/himno.mp3"
 
 social:
   facebook: "https://facebook.com/profile.php?id=100008360917770"
