--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ institution:
   name: "Institución Educativa Atanasio Girardot"
   location: "Girardota, Antioquia"
   logo: "/assets/images/logo.png"
+  flag: "/assets/images/bandera-girardota.png"  # ← AGREGADO
   anthem: "/assets/audio/himno.mp3"
 
 social:
@@ -13,13 +14,14 @@ social:
   youtube: "https://www.youtube.com/@juliansancheztaborda5203"
   instagram: "https://www.instagram.com/ie.atanasio"
 
-theme: minima
+theme: minima  # ← CORREGIDO (estaba mal indentado)
 
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-sitemap
 
+# Colecciones
 collections:
   noticias:
     output: true
@@ -27,7 +29,11 @@ collections:
   eventos:
     output: true
     permalink: /eventos/:title/
+  galeria:
+    output: true
+    permalink: /galeria/:title/
 
+# Defaults
 defaults:
   - scope:
       path: ""
@@ -40,17 +46,20 @@ defaults:
     values:
       layout: "evento"
 
+# Paginación
 paginate: 9
 paginate_path: "/noticias/page:num/"
 
+# Zona horaria
 timezone: America/Bogota
 
+# Markdown
 markdown: kramdown
 
+# Exclude
 exclude:
   - README.md
   - Gemfile
   - Gemfile.lock
   - node_modules
   - vendor
-EOF
