Primer commit - Periódico Digital

--- a/_config.yml
+++ b/_config.yml
@@ -1,65 +1,13 @@
-title: "Notiatanasiano"
-url: "https://jusata.github.io"
-baseurl: "/notiatanasiano"
+title: "Notiatanasiano"  # Tu título
+url: "https://jusata.github.io"  # Tu URL
 
 institution:
   name: "Institución Educativa Atanasio Girardot"
   location: "Girardota, Antioquia"
   logo: "/assets/images/logo.png"
-  flag: "/assets/images/bandera-girardota.png"  # ← AGREGADO
   anthem: "/assets/audio/himno.mp3"
 
 social:
   facebook: "https://facebook.com/profile.php?id=100008360917770"
   youtube: "https://www.youtube.com/@juliansancheztaborda5203"
   instagram: "https://www.instagram.com/ie.atanasio"
-
-theme: minima  # ← CORREGIDO (estaba mal indentado)
-
-plugins:
-  - jekyll-feed
-  - jekyll-seo-tag
-  - jekyll-sitemap
-
-# Colecciones
-collections:
-  noticias:
-    output: true
-    permalink: /noticias/:title/
-  eventos:
-    output: true
-    permalink: /eventos/:title/
-  galeria:
-    output: true
-    permalink: /galeria/:title/
-
-# Defaults
-defaults:
-  - scope:
-      path: ""
-      type: "noticias"
-    values:
-      layout: "noticia"
-  - scope:
-      path: ""
-      type: "eventos"
-    values:
-      layout: "evento"
-
-# Paginación
-paginate: 9
-paginate_path: "/noticias/page:num/"
-
-# Zona horaria
-timezone: America/Bogota
-
-# Markdown
-markdown: kramdown
-
-# Exclude
-exclude:
-  - README.md
-  - Gemfile
-  - Gemfile.lock
-  - node_modules
-  - vendor
