Primer commit - Periódico Digital

--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -3,6 +3,6 @@
 # Usa: https://www.youtube.com/embed/ID_AQUI
 
 - title: "Ceremonia de Graduación 2024"
-  url: "https://www.youtube.com/watch?v=abPVEJoRiMw"
+  url: "https://youtu.be/NdYWuo9OFAw?si=qVMepiACi6CZcJZh"
   description: "Emotiva ceremonia de graduación de la promoción 2024"
   date: 2024-11-20
