--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -3,6 +3,6 @@
 # Usa: https://www.youtube.com/embed/ID_AQUI
 
 - title: "Ceremonia de Graduación 2024"
-  url: "https://www.youtube.com/shorts/7vWsEgAjLj4"
+  url: "https://www.youtube.com/watch?v=5z0xB8lRRqM"
   description: "Emotiva ceremonia de graduación de la promoción 2024"
   date: 2024-11-20
