Primer commit - Periódico Digital

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Configuración del Periódico Digital
-title: "Notiatanasiano"
+title: "Notiatanasianoa"
 subtitle: "Periódico Digital Institucional"
 description: "Noticias y eventos de la Institución Educativa Atanasio Girardot"
 baseurl: "/notiatanasiano"
