--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "https://jusata.github.io"
 # Información de la institución
 institution:
   name: "Institución Educativa Atanasio Girardot"
-  location: "Girardota, Antioquia"
+  location: "Girardota, Antioquiaa"
   logo: "/assets/images/logo.png"
   flag: "/assets/images/bandera-girardota.png"
   anthem: "/assets/audio/himno.mp3"
