--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Configuración del Periódico Digital
-title: "Notiatanasianoa"
+title: "Notiatanasiano"
 subtitle: "Periódico Digital Institucional"
 description: "Noticias y eventos de la Institución Educativa Atanasio Girardot"
 baseurl: "/notiatanasiano"
@@ -8,7 +8,7 @@ url: "https://jusata.github.io"
 # Información de la institución
 institution:
   name: "Institución Educativa Atanasio Girardot"
-  location: "Girardota, Antioquiaa"
+  location: "Girardota, Antioquia"
   logo: "/assets/images/logo.png"
   flag: "/assets/images/bandera-girardota.png"
   anthem: "/assets/audio/himno.mp3"
